--- a/src/main/webapp/app/entities/subcategorie/list/subcategorie.component.html
+++ b/src/main/webapp/app/entities/subcategorie/list/subcategorie.component.html
@@ -1,4 +1,185 @@
-<div>
+<div id="page-title">
+  <h3>Subcategory</h3>
+</div>
+<div class="panel">
+  <div class="panel-heading">
+    <a [routerLink]="['/subcategorie/new']" class="btn btn-success btn-alt btn-xs" style="border-radius: 0px !important">
+      <i class="fa fa-plus"></i>
+      Create New Subcategory
+    </a>
+
+    <a class="btn btn-primary btn-alt btn-xs pull-right" id="searchButton">
+      <i class="fa fa-search"></i>
+      Search
+    </a>
+  </div>
+
+  <div class="panel-body">
+    <div class="table-responsive" style="min-height: 300px">
+      <!-- <div class="modal fade" id="deleteModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+							<form method="POST" action="http://localhost/intell/public/admin/subcategory/delete/3" accept-charset="UTF-8"></form><input name="_method" type="hidden" value="DELETE"><input name="_token" type="hidden" value="XGTWMabU8DBmZ0ZYmEO9tiKKhHDejMZi56RdNcxH">
+						  <div class="modal-dialog" role="document">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+						        <h4 class="modal-title" id="myModalLabel">
+						        	<span style="color:red;">
+						        		Imprimante has total 0 product(s)
+						        	</span>
+						        </h4>
+						      </div>
+						      <div class="modal-body">
+						        <h4>
+						        	Are you sure to delete <b>Imprimante</b> Subcategory?
+						        </h4>
+						      </div>
+						      <div class="modal-footer">
+						        <button type="button" class="btn btn-default" data-dismiss="modal">		Close
+						        </button>
+						        <button type="submit" class="btn btn-danger">
+						        	Delete
+						        </button>
+						      </div>
+						    </div>
+						  </div>
+						  
+						</div><div class="modal fade" id="deleteModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+							<form method="POST" action="http://localhost/intell/public/admin/subcategory/delete/2" accept-charset="UTF-8"></form><input name="_method" type="hidden" value="DELETE"><input name="_token" type="hidden" value="XGTWMabU8DBmZ0ZYmEO9tiKKhHDejMZi56RdNcxH">
+						  <div class="modal-dialog" role="document">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+						        <h4 class="modal-title" id="myModalLabel">
+						        	<span style="color:red;">
+						        		Ordinateur bureau has total 0 product(s)
+						        	</span>
+						        </h4>
+						      </div>
+						      <div class="modal-body">
+						        <h4>
+						        	Are you sure to delete <b>Ordinateur bureau</b> Subcategory?
+						        </h4>
+						      </div>
+						      <div class="modal-footer">
+						        <button type="button" class="btn btn-default" data-dismiss="modal">		Close
+						        </button>
+						        <button type="submit" class="btn btn-danger">
+						        	Delete
+						        </button>
+						      </div>
+						    </div>
+						  </div>
+						  
+						</div><div class="modal fade" id="deleteModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+							<form method="POST" action="http://localhost/intell/public/admin/subcategory/delete/1" accept-charset="UTF-8"></form><input name="_method" type="hidden" value="DELETE"><input name="_token" type="hidden" value="XGTWMabU8DBmZ0ZYmEO9tiKKhHDejMZi56RdNcxH">
+						  <div class="modal-dialog" role="document">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+						        <h4 class="modal-title" id="myModalLabel">
+						        	<span style="color:red;">
+						        		Ordinateur portable has total 2 product(s)
+						        	</span>
+						        </h4>
+						      </div>
+						      <div class="modal-body">
+						        <h4>
+						        	Are you sure to delete <b>Ordinateur portable</b> Subcategory?
+						        </h4>
+						      </div>
+						      <div class="modal-footer">
+						        <button type="button" class="btn btn-default" data-dismiss="modal">		Close
+						        </button>
+						        <button type="submit" class="btn btn-danger">
+						        	Delete
+						        </button>
+						      </div>
+						    </div>
+						  </div>
+						  
+						</div> -->
+      <table class="table table-bordered table-striped">
+        <thead class="bg-gradient-9">
+          <tr>
+            <td class="text-center font-white">#</td>
+            <td class="text-center font-white">Name</td>
+            <td class="text-center font-white">Category</td>
+            <td class="text-center font-white">Actions</td>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr *ngFor="let subcategorie of subcategories; let index = index">
+            <td class="text-center">{{ index + 1 }}</td>
+            <td class="text-center">{{ subcategorie.name }}</td>
+            <td class="text-center">{{ subcategorie.categorie?.categoryName }}</td>
+            <td class="text-center">
+              <a [routerLink]="['/subcategorie', subcategorie.id, 'edit']" class="btn btn-info btn-alt btn-xs">
+                <i class="fa fa-edit"></i>
+                Edit
+              </a>
+              <!-- Delete modal trigger -->
+              <a type="button" class="btn btn-danger btn-alt btn-xs" data-toggle="modal" data-target="#deleteModal3">
+                <i class="fa fa-trash"></i>
+                Delete
+              </a>
+
+              <a [routerLink]="['/subcategorie', subcategorie.id, 'product']" class="btn btn-purple btn-alt btn-xs">
+                <i class="fa fa-cube"></i>
+                Product
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!--Pagination-->
+    <div class="row justify-content-center" style="text-align: center">
+      <ngb-pagination
+        [collectionSize]="totalItems"
+        [(page)]="ngbPaginationPage"
+        [pageSize]="itemsPerPage"
+        [maxSize]="5"
+        [rotate]="true"
+        [boundaryLinks]="true"
+        (pageChange)="loadPage($event)"
+      ></ngb-pagination>
+    </div>
+    <!--Ends-->
+  </div>
+
+  <!-- Subcategory search modal -->
+  <!-- <div class="modal fade" id="searchModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="POST" action="http://localhost/intell/public/admin/subcategory" accept-charset="UTF-8" class="form-horizontal"><input name="_token" type="hidden" value="XGTWMabU8DBmZ0ZYmEO9tiKKhHDejMZi56RdNcxH">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">×</button>
+                    <h4 class="modal-title"> Search Subcategory</h4>
+                </div>
+
+                <div class="modal-body">                  
+                    <div class="form-group">
+                        <label for="Name" class="col-sm-3">Name</label>
+                        <div class="col-sm-9">
+                            <input class="form-control" name="name" type="text">
+                        </div>
+                    </div>                                             
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <input class="btn btn-primary" data-disable-with="core.searching" type="submit" value="Search">
+                </div>
+                </form>
+            </div>
+        </div>
+    </div> -->
+  <!-- search modal ends -->
+</div>
+
+<!-- <div>
   <h2 id="page-heading" data-cy="SubcategorieHeading">
     <span>Subcategories</span>
 
@@ -106,3 +287,4 @@
     </div>
   </div>
 </div>
+ -->
