--- a/src/main/webapp/app/entities/categorie/list/categorie.component.html
+++ b/src/main/webapp/app/entities/categorie/list/categorie.component.html
@@ -1,64 +1,50 @@
-<div class="panel-heading">
-  <a [routerLink]="['/categorie/new']" class="btn btn-success btn-alt btn-xs">
-    <i class="fa fa-plus"></i>
-    {{ 'Create a new category' }}
-  </a>
-
-  <!-- 	@if(count(Request::input()))
-		<span class="pull-right">	
-            <a class="btn btn-alt btn-default font-black btn-xs" href="{{ action('CategoryController@getIndex') }}">
-            	<i class="fa fa-eraser"></i> 
-            	{{ trans('core.clear') }}
-            </a>
-
-            <a class="btn btn-primary btn-alt btn-xs" id="searchButton">
-            	<i class="fa fa-search"></i> 
-            	{{ trans('core.modify_search') }}
-            </a>
-        </span>
-    @else
-        <a class="btn btn-primary btn-alt btn-xs pull-right" id="searchButton">
-			<i class="fa fa-search"></i> {{ trans('core.search') }}
-		</a>
-    @endif -->
+<div id="page-title">
+  <h3>Liste des catégories</h3>
 </div>
+<div class="panel">
+  <div class="panel-heading">
+    <a [routerLink]="['/categorie/new']" class="btn btn-success btn-alt btn-xs">
+      <i class="fa fa-plus"></i>
+      {{ 'Create a new category' }}
+    </a>
+  </div>
 
-<div class="panel-body">
-  <div class="table-responsive" style="min-height: 300px">
-    <table cellpadding="0" cellspacing="0" class="table table-striped table-bordered">
-      <thead class="bg-gradient-9">
-        <tr>
-          <td class="text-center font-white">#</td>
-          <td class="text-center font-white">{{ 'Name' }}</td>
-          <td class="text-center font-white">{{ 'Subcategory' }}</td>
-          <td class="text-center font-white">{{ 'Actions' }}</td>
-        </tr>
-      </thead>
+  <div class="panel-body">
+    <div class="table-responsive" style="min-height: 300px">
+      <table cellpadding="0" cellspacing="0" class="table table-striped table-bordered">
+        <thead class="bg-gradient-9">
+          <tr>
+            <td class="text-center font-white">#</td>
+            <td class="text-center font-white">{{ 'Name' }}</td>
+            <td class="text-center font-white">{{ 'Subcategory' }}</td>
+            <td class="text-center font-white">{{ 'Actions' }}</td>
+          </tr>
+        </thead>
 
-      <tbody>
-        <tr *ngFor="let categorie of categories; let index = index" data-cy="entityTable">
-          <td class="text-center">{{ index + 1 }}</td>
-          <td class="text-center">{{ categorie.categoryName }}</td>
-          <td class="text-center">
-            <ol>
-              <li *ngFor="let subCategory of categorie.subcategories">{{ subCategory.name }}</li>
-            </ol>
-          </td>
-          <td class="text-center">
-            <a [routerLink]="['/categorie', categorie.id, 'edit']" class="btn btn-info btn-alt btn-xs">
-              <i class="fa fa-edit"></i>
-              {{ 'edit' }}
-            </a>
-            <!-- Delete modal trigger -->
-            <a type="button" class="btn btn-danger btn-alt btn-xs" data-toggle="modal" data-target="#deleteModal">
-              <i class="fa fa-trash"></i>
-              {{ 'delete' }}
-            </a>
-          </td>
-        </tr>
+        <tbody>
+          <tr *ngFor="let categorie of categories; let index = index" data-cy="entityTable">
+            <td class="text-center">{{ index + 1 }}</td>
+            <td class="text-center">{{ categorie.categoryName }}</td>
+            <td class="text-center">
+              <ol>
+                <li *ngFor="let subCategory of categorie.subcategories">{{ subCategory.name }}</li>
+              </ol>
+            </td>
+            <td class="text-center">
+              <a [routerLink]="['/categorie', categorie.id, 'edit']" class="btn btn-info btn-alt btn-xs">
+                <i class="fa fa-edit"></i>
+                {{ 'edit' }}
+              </a>
+              <!-- Delete modal trigger -->
+              <a type="button" class="btn btn-danger btn-alt btn-xs" data-toggle="modal" data-target="#deleteModal">
+                <i class="fa fa-trash"></i>
+                {{ 'delete' }}
+              </a>
+            </td>
+          </tr>
 
-        <!-- Modal -->
-        <!-- <div class="modal fade" id="deleteModal{{category->id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <!-- Modal -->
+          <!-- <div class="modal fade" id="deleteModal{{category->id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 						{!! Form::open(['route' => ['category.delete', $category], 'method' => 'delete' ]) !!}
 					  <div class="modal-dialog" role="document">
 					    <div class="modal-content">
@@ -90,15 +76,22 @@
 					  </div>
 					  {!! Form::close() !!}
 					</div> -->
-      </tbody>
-    </table>
-  </div>
+        </tbody>
+      </table>
+    </div>
 
-  <!--Pagination-->
-  <!-- <div class="pull-right">
-		{{ categories.links() }}
-	</div> -->
-  <!--Ends-->
+    <div class="row justify-content-center" style="text-align: center">
+      <ngb-pagination
+        [collectionSize]="totalItems"
+        [(page)]="ngbPaginationPage"
+        [pageSize]="itemsPerPage"
+        [maxSize]="5"
+        [rotate]="true"
+        [boundaryLinks]="true"
+        (pageChange)="loadPage($event)"
+      ></ngb-pagination>
+    </div>
+  </div>
 </div>
 
 <!--Search Modal Starts-->
