--- a/src/main/webapp/app/entities/categorie/update/categorie-update.component.html
+++ b/src/main/webapp/app/entities/categorie/update/categorie-update.component.html
@@ -1,3 +1,52 @@
+<div id="page-title">
+  <h3>Create or update category</h3>
+</div>
+
+<div class="panel">
+  <div class="panel-body">
+    <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm" class="form-horizontal bordered-row">
+      <div class="form-group" [hidden]="true">
+        <label class="form-control-label" for="field_id">ID</label>
+        <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
+      </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label">Category Name</label>
+        <span class="required">*</span>
+        <div class="col-sm-6">
+          <input
+            type="text"
+            class="form-control"
+            name="categoryName"
+            id="field_categoryName"
+            data-cy="categoryName"
+            formControlName="categoryName"
+          />
+          <div
+            *ngIf="editForm.get('categoryName')!.invalid && (editForm.get('categoryName')!.dirty || editForm.get('categoryName')!.touched)"
+          >
+            <small class="form-text text-danger" *ngIf="editForm.get('categoryName')?.errors?.required"> This field is required. </small>
+            <small class="form-text text-danger" *ngIf="editForm.get('categoryName')?.errors?.maxlength">
+              This field cannot be longer than 100 characters.
+            </small>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-default content-box text-center pad20A mrg25T">
+        <input
+          class="btn btn-lg btn-primary"
+          type="submit"
+          id="save-entity"
+          data-cy="entityCreateSaveButton"
+          [disabled]="editForm.invalid || isSaving"
+          value="Save"
+        />
+      </div>
+    </form>
+  </div>
+</div>
+
+<!-- 
 <div class="row justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
@@ -95,3 +144,4 @@
     </form>
   </div>
 </div>
+ -->
