--- a/src/main/webapp/app/entities/subcategorie/update/subcategorie-update.component.html
+++ b/src/main/webapp/app/entities/subcategorie/update/subcategorie-update.component.html
@@ -1,4 +1,71 @@
-<div class="row justify-content-center">
+<div id="page-title">
+  <h3 class="title-hero">Create or edit subcategory</h3>
+</div>
+<div class="panel">
+  <div class="panel-body">
+    <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm" class="form-horizontal bordered-row">
+      <div class="form-group" hidden>
+        <label class="form-control-label" for="field_id">ID</label>
+        <input type="number" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
+      </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label">
+          Subcategory Name
+          <span class="required">*</span>
+        </label>
+        <div class="col-sm-6">
+          <input type="text" class="form-control" name="name" id="field_name" data-cy="name" formControlName="name" />
+          <div *ngIf="editForm.get('name')!.invalid && (editForm.get('name')!.dirty || editForm.get('name')!.touched)">
+            <small class="form-text text-danger" *ngIf="editForm.get('name')?.errors?.required"> This field is required. </small>
+            <small class="form-text text-danger" *ngIf="editForm.get('name')?.errors?.maxlength">
+              This field cannot be longer than 191 characters.
+            </small>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label" title="Please Select Category">
+          Category Name
+          <span class="required">*</span>
+        </label>
+        <div class="col-sm-6">
+          <!-- <select class="form-control select2bs4 " style="width: 100%;" id="field_categorie" data-cy="categorie" name="categorie" formControlName="categorie">
+              <option [value]="null"></option>
+              <option
+                [value]="categorieOption.id === editForm.get('categorie')!.value?.id ? editForm.get('categorie')!.value : categorieOption"
+                *ngFor="let categorieOption of categoriesSharedCollection; trackBy: trackCategorieById"
+              >
+                {{ categorieOption.categoryName }}
+              </option>
+            </select> -->
+          <select class="form-control" id="field_categorie" data-cy="categorie" name="categorie" formControlName="categorie">
+            <option [ngValue]="null"></option>
+            <option
+              [ngValue]="categorieOption.id === editForm.get('categorie')!.value?.id ? editForm.get('categorie')!.value : categorieOption"
+              *ngFor="let categorieOption of categoriesSharedCollection; trackBy: trackCategorieById"
+            >
+              {{ categorieOption.categoryName }}
+            </option>
+          </select>
+        </div>
+      </div>
+
+      <div class="bg-default content-box text-center pad20A mrg25T">
+        <button
+          type="submit"
+          id="save-entity"
+          data-cy="entityCreateSaveButton"
+          [disabled]="editForm.invalid || isSaving"
+          class="btn btn-lg btn-primary"
+        >
+          <fa-icon icon="save"></fa-icon>&nbsp;<span>Save</span>
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<!-- div class="row justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
       <h2 id="jhi-subcategorie-heading" data-cy="SubcategorieCreateUpdateHeading">Create or edit a Subcategorie</h2>
@@ -98,4 +165,4 @@
       </div>
     </form>
   </div>
-</div>
+</div> -->
